Change Log

2009-08-11
	Fixes:
	- Cleaned up the SC extension;
	- Added missing S9SC(1) man page.
	Thanks again, Masaru KIMURA.
2009-08-08
	Added constants for options, so you can write
	(plot* -7 7 sin type: scatter style: 3)
	instead of
	(plot* -7 7 sin 'type: 'scatter 'style: 3).
2009-08-07
	Added 'X-GRID: and 'Y-GRID: options to S9SC SETUP procedure.
	Added abbreviations, e.g.: 'STEP: for 'X-STEP: and 'Y-STEP:, etc.
	Fix: second argument of EXPT could not be real.
2009-08-06
	Added option argument checking to S9SC procedures.
	Fix: made PRINT-CODE generate proper links for LOAD-FROM-LIBRARY
	arguments without ".scm" suffix.
2009-08-05
	Wrote the S9SC(1) man page.
2009-08-04
 	Re-organized the extension libraries.
	Renamed the GFX extension to SC.
	Added initialization procedures to extensions.
	Made (LOG N) return #<NaN> for non-positive N.
2009-07-26
	Fixed some warnings in GFX extension. Thanks, Barak Pearlmutter.
2009-07-25
	Added statistics package to CONTRIB.
	Added the Scheme 9 Scientific Calculator extension (S9SC).
	Note that S9SC is *very* experimental at this stage.
2009-07-08
	Fixed that rounding bug in ATAN.
2009-07-05
	Test suite failed on 64-bit machines due strange rounding
	errors in ATAN. Decreased accuracy to 4 digits as a lame
	work-around. Suggestions welcome.
2009-07-04
	Added support for unspecific digits (#) to STRING->NUMBER.
	Fix: (ASIN 1) and (ACOS 0) were undefined.
	Fixed some minor flaws.
	Added tests for ACOS, ASIN, ATAN, and STRING->NUMBER.
2009-07-01
	Added the ACOS, ASIN, ATAN procedures.
	Fix: real number normalization *first* removed trailing
	zeros and *then* truncated the mantissa. Oops.
2009-06-29
	Added '#' syntax for unspecific digits in inexact numbers.
2009-06-26
	Fix: STRING->NUMBER always returned an inexact result for
	real number representations.
2009-06-25
	Fix: Stack was not cleaned up properly in some error conditions.
	Fix: (*) and (+) could crash the interpreter.