@@ -1,5 +1,8 @@
 Change Log
 
+2009-08-14
+	Fix: '() printed two ()'s.
+	Added the UNSORT procedure to LIB.
 2009-08-11
 	Fixes:
 	- Cleaned up the SC extension;
